now using virtual includes

--- a/hw6pages/history.html
+++ b/hw6pages/history.html
@@ -1,61 +1,30 @@
-<!DOCTYPE html>
-<html lang ="en">
-<head>
-<meta charset="utf-8">
-<title>Rizza’s Pizzas</title>
-<link rel="stylesheet" href="../hw6style.css" type="text/css">
-</head>
+<!--#include virtual="../common/header.html"-->
  
 <body>
-
-<div id="top"> 
-	<h1>Rizza's Pizzas</h1>
-</div>
-
-<div id="top"> 
-	 <a href="../index.html"> Home </a> 
-	 &nbsp;
-	 &nbsp; 
-	 <a href="order.html"> Order </a> 
-	 &nbsp;
-	 &nbsp;
-	 <a href="pictures.html"> Pictures </a>
-	 &nbsp;
-	 &nbsp;
-	 <a href="reviews.html"> Reviews </a>
-	 &nbsp;
-	 &nbsp;
-	 <a href="history.html"> History </a>
-</div>
-
-
+ 
+ <!--#include virtual="../common/menu.html"-->
 
 <div id="container">
 	<div id="content">
 		<div id="centerdiv">
-
 			<h3>About US:</h3>
-			<p>
-			Rizza’s Pizzas was founded in 1968 by Nero Rizza, a descendant of the inventor of pizza. 
-			Through the struggle of political unrest during the time, Nero sold all of his belongings to buy a one story 15 square meter building where he would sell Pizza. 
-			Learning from his grandmother, Nero’s culinary talent allowed him to attract quite a following. 
-			Not soon after, the building was remodeled into the exquisite architecture that we have today. 
-			What made Rizza’s Pizzas so successful was that after finding a stable foothold Nero was able to focus on his passion in the craft. 
-			Constantly improving upon recipes, Nero hoped to deliver the best experience possible for all his customers. 
-			One day in the spring of 1973 Nero fell in love with the nice lady who would drop off the restaurants ingredients. 
-			After they married they would have Angelo Rizza. 
-			Nero’s heath declined in 2005 and, surrounded by loved ones he passed down the family business to Angelo 
-			who has worked rigorously and achieved his father’s dreams of becoming a world renowned restaurant.
-			</p>		
-
+				<p>
+				Rizza’s Pizzas was founded in 1968 by Nero Rizza, a descendant of the inventor of pizza. 
+				Through the struggle of political unrest during the time, Nero sold all of his belongings to buy a one story 15 square meter building where he would sell Pizza. 
+				Learning from his grandmother, Nero’s culinary talent allowed him to attract quite a following. 
+				Not soon after, the building was remodeled into the exquisite architecture that we have today. 
+				What made Rizza’s Pizzas so successful was that after finding a stable foothold Nero was able to focus on his passion in the craft. 
+				Constantly improving upon recipes, Nero hoped to deliver the best experience possible for all his customers. 
+				One day in the spring of 1973 Nero fell in love with the nice lady who would drop off the restaurants ingredients. 
+				After they married they would have Angelo Rizza. 
+				Nero’s heath declined in 2005 and, surrounded by loved ones he passed down the family business to Angelo 
+				who has worked rigorously and achieved his father’s dreams of becoming a world renowned restaurant.
+				</p>		
 		</div>
 	</div>
 </div>
 
-
-<div id="footer"> 
-	<h4> &copy; Rizza’s Pizzas 1968-2021 Nathan Rizza</h4>
-</div>
+<!--#include virtual="../common/footer.html"-->
  
 </body>
 </html>
