--- a/hw6pages/reviews.html
+++ b/hw6pages/reviews.html
@@ -1,33 +1,8 @@
-<!DOCTYPE html>
-<html lang ="en">
-<head>
-<meta charset="utf-8">
-<title>Rizza’s Pizzas</title>
-<link rel="stylesheet" href="../hw6style.css" type="text/css">
-</head>
+<!--#include virtual="../common/header.html"-->
  
 <body>
-
-<div id="top"> 
-	<h1>Rizza's Pizzas</h1>
-</div>
-
-<div id="top"> 
-	 <a href="../index.html"> Home </a> 
-	 &nbsp;
-	 &nbsp; 
-	 <a href="order.html"> Order </a> 
-	 &nbsp;
-	 &nbsp;
-	 <a href="pictures.html"> Pictures </a>
-	 &nbsp;
-	 &nbsp;
-	 <a href="reviews.html"> Reviews </a>
-	 &nbsp;
-	 &nbsp;
-	 <a href="history.html"> History </a>
-</div>
-
+ 
+ <!--#include virtual="../common/menu.html"-->
 
 <div id="container">
 	<div id="content">
@@ -50,9 +25,8 @@
 	</div>
 </div>
 
-<div id="footer"> 
-	<h4> &copy; Rizza’s Pizzas 1968-2021 Nathan Rizza</h4>
-</div>
+<!--#include virtual="../common/footer.html"-->
+ 
  
 </body>
 </html>
