--- a/index.html
+++ b/index.html
@@ -1,32 +1,8 @@
-<!DOCTYPE html>
-<html lang ="en">
-<head>
-<meta charset="utf-8">
-<title>Rizza’s Pizzas</title>
-<link rel="stylesheet" href="hw6style.css" type="text/css">
-</head>
+<!--#include virtual="common/header.html"-->
  
 <body>
-
-<div id="top"> 
-	<h1>Rizza's Pizzas</h1>
-</div>
-
-<div id="top"> 
-	 <a href="index.html"> Home </a>
-	 &nbsp;
-	 &nbsp;
-	<a href="hw6pages/order.html"> Order </a> 
-	 &nbsp;
-	 &nbsp;
-	 <a href="hw6pages/pictures.html"> Pictures </a>
-	 &nbsp;
-	 &nbsp;
-	 <a href="hw6pages/reviews.html"> Reviews </a>
-	 &nbsp;
-	 &nbsp;
-	 <a href="hw6pages/history.html"> History </a>
-</div>
+ 
+ <!--#include virtual="common/menu.html"-->
  
   <div id="container">
 	<div id="leftcolumn">
@@ -73,6 +49,7 @@
  
 	<div id="rightcolumn">
 		<div id="content">
+	
 			<h2>Pizza</h2>
 			<ul>
 				<li>Crust: Thick, Thin, Focaccia, Wood-Fired, Filled, None</li>
@@ -109,9 +86,7 @@
 	</div>
 </div>
 
-<div id="footer"> 
-	<h4> &copy; Rizza’s Pizzas 1968-2021 Nathan Rizza</h4>
-</div>
+<!--#include virtual="common/footer.html"-->
  
 </body>
 </html>
